--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,25 +6,32 @@
 #    By: bepifani <bepifani@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/05 11:48:01 by bepifani          #+#    #+#              #
-#    Updated: 2021/10/05 18:26:49 by bepifani         ###   ########.fr        #
+#    Updated: 2021/10/09 18:15:06 by bepifani         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
 
-LIST = ft_atoi.c	ft_bzero.c	ft_isalnum.c	ft_isalpha.c\
-		ft_isascii.c	ft_isdigit.c	ft_isprint.c	ft_memchr.c\
-		ft_memcmp.c	ft_memmove.c	ft_memset.c	ft_strchr.c	ft_strlcat.c\
-		ft_strlcpy.c	ft_strlen.c	ft_strncmp.c	ft_strnstr.c\
-		ft_strrchr.c	ft_tolower.c	ft_toupper.c
+SRC = ft_atoi	ft_bzero	ft_isalnum	ft_isalpha\
+		ft_isascii	ft_isdigit	ft_isprint	ft_memchr\
+		ft_memcmp	ft_memmove	ft_memset	ft_strchr	ft_strlcat\
+		ft_strlcpy	ft_strlen	ft_strncmp	ft_strnstr\
+		ft_strrchr	ft_tolower	ft_toupper	ft_calloc\
+		ft_strdup	ft_memcpy
+
+SRCS = $(addsuffix .c, $(SRC))
 
 FLAGS = -Wall -Wextra -Werror
 
+OBJS = $(SRCS:.c=.o)
 
+$(NAME) : $(OBJS)
+		ar rc $(NAME) $(OBJS)
+		ranlib $(NAME)
+.c.o :
+	gcc $(FLAGS) -c $< -o ${<:.c=.o}
 
-all : 
-	gcc $(LIST) -o $(NAME)
-	ar rc $(NAME) *.o
+all : $(NAME)
 	
 
 clean :
