--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: bepifani <bepifani@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/05 11:48:01 by bepifani          #+#    #+#              #
-#    Updated: 2021/10/10 19:53:21 by bepifani         ###   ########.fr        #
+#    Updated: 2021/10/11 21:11:56 by bepifani         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,12 @@ SRC = 	ft_atoi		ft_bzero	ft_isalnum	ft_isalpha\
 		ft_strlcpy	ft_strlen	ft_strncmp	ft_strnstr\
 		ft_strrchr	ft_tolower	ft_toupper	ft_calloc\
 		ft_strdup	ft_memcpy	ft_substr	ft_strjoin\
-		ft_strtrim	ft_split	ft_itoa		ft_strmapi
+		ft_strtrim	ft_split	ft_itoa		ft_strmapi\
+		ft_striteri	ft_putchar_fd	ft_putstr_fd\
+		ft_putendl_fd	ft_putnbr_fd	ft_lstnew\
+		ft_lstadd_front	ft_lstsize	ft_lstlast\
+		ft_lstadd_back	ft_lstdelone	ft_lstclear\
+		ft_lstiter	ft_lstmap
 
 SRCS = $(addsuffix .c, $(SRC))
 
@@ -33,7 +38,8 @@ $(NAME) : $(OBJS)
 	gcc $(FLAGS) -c $< -o ${<:.c=.o}
 
 all : $(NAME)
-	
+
+bonus : all	
 
 clean :
 	rm -f *.o
@@ -41,4 +47,6 @@ clean :
 fclean: clean
 	rm -f $(NAME)
 
-.PHONY : all clean fclean
+re : fclean all
+
+.PHONY : all clean fclean re
